--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,9 @@ $dark_grey: #6b6868;
 $btn_grey: #333333;
 $background_grey:#F5F5F5;
 $footer_bg:#1E1E1E;
+$white: white;
 
 //padding: 
 $length_50: 50px;
+$length_40: 40px;
+$length_30: 30px;
