--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,8 @@
+@import "variables";
+
 header {
     padding:15px 80px 30px;
+    background-color: $white;
     .logo {
         height: 85px;
     }
