--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -18,11 +18,23 @@ h3 {
 h6 {
     font-size: 14px;
 }
+
+h5 {
+    font-size: 12px;
+    color: $yellow;
+    font-weight: 700;
+    padding-bottom: 20px;
+
+}
 p {
     font-size: 12px;
     line-height: 25px !important;
     text-align: center;
     color: $dark_grey;
+}
+
+li{
+    list-style: none;
 }
 
 .my_btn {
