--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,10 @@
         padding: 9px 24px;
         position: absolute;
         transform: translate(-50%, 24px);
+        &:hover {
+            background-color: $white;
+            border: 1px solid black;
+        }
     }
 }
 
@@ -41,6 +45,13 @@
         background-color: $background_grey;
         border-radius: 5px;
         min-height: 200px;
+        position: relative;
+
+        &:hover {
+            .overlay {
+                opacity: 1;
+            }
+        }
 
         .icon_wrapper {
             width: 40px;
@@ -54,6 +65,29 @@
                 vertical-align: middle;
                 font-size: 16px;
                 line-height: 40px;
+            }
+        }
+        
+        .overlay {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 5px;
+            opacity: 0;
+            background-color: $yellow;
+            
+            h6 {
+                font-weight: 300;
+                font-size: 18px;
+            }
+
+            .my_btn {
+                color: black;
+                background-color: rgb(238, 238, 159);
+                padding: 12px 35px;
+                font-size: 12px;
             }
         }
     }
@@ -87,18 +121,24 @@
     background-color: $background_grey;
     padding: $length_50 0;
 
-    .circle-icon {
-        background: #ffc0c0;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 100px;
-        font-size: 58px;
-        color: $white;
-    }
-
     .quality {
+        .circle-icon {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 100px;
+            font-size: 58px;
+            color: $white;
+        }
+        &:hover {
+            .circle-icon {
+                background-color: $yellow;
+            }
+            h6 {
+                color: $yellow;
+            }
+        }
         .fa-home {
             background-color: #4ea4a5;
         }
