--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,12 +19,12 @@
         font-size: 18px;
     }
 }
+
 .section_2 {
     padding: $length_50;
     background-color: $yellow;
     position: relative;
     color: $dark_grey;
-
     a {
         padding: 9px 24px;
         position: absolute;
@@ -67,7 +67,7 @@
                 line-height: 40px;
             }
         }
-        
+
         .overlay {
             position: absolute;
             left: 0;
@@ -77,7 +77,7 @@
             border-radius: 5px;
             opacity: 0;
             background-color: $yellow;
-            
+
             h6 {
                 font-weight: 300;
                 font-size: 18px;
@@ -182,6 +182,7 @@
         font-size: 16px;
     }
 }
+
 .section_8 {
     padding: $length_50 0;
     background-color: $background_grey;
@@ -191,10 +192,12 @@
         color: $dark_grey;
         min-height: 500px;
         border-radius: 0;
-        width: 100%;
+        width: 100% !important;
 
         img {
             border-radius: 0;
+            width: 100%;
+            object-fit: contain;
         }
         .card-body {
             h3 {
@@ -209,7 +212,12 @@
             }
         }
     }
+    .line{
+        border: 1px solid white!important;
+
+    }
 }
+
 .section_9 {
     padding: $length_50 0;
     .partner {
