--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -5,6 +5,7 @@ h1 {
     color: $white;
     font-weight: 600;
 }
+
 h2 {
     font-size: 28px;
     font-weight: 300;
@@ -25,6 +26,7 @@ h5 {
     font-weight: 700;
     padding-bottom: 20px;
 }
+
 p {
     font-size: 12px;
     line-height: 25px;
@@ -57,8 +59,8 @@ li {
         color: $white;
         background-color: $btn_grey;
     }
-
 }
+
 .after_line {
     position: relative;
 
@@ -73,9 +75,13 @@ li {
         border-top: 2px solid $yellow;
     }
 }
+
 .see-more {
     letter-spacing: 2px;
     margin: calc($length_30 * 2) 0;
+    .line {
+        height: 0px;
+        flex-grow: 1;
+        border: 1px solid #F5F5F5;
+    }
 }
-
-
